# flights

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  connection.toml.example  pipeline.toml.example
.github/workflows/: ci.yml
aprs_rs/: Cargo.toml
aprs_rs/src/: aprs_types.rs  lib.rs  parse.rs
flights/: Cargo.toml
flights/src/: cli.rs  lib.rs  main.rs
flights/src/core/: airspace.rs  parser.rs  thread_manager.rs
flights/src/core/airspace/: detail.rs  mod.rs  task.rs
flights/src/core/ingestor/: config.rs  errors.rs  task.rs
flights/src/core/ingestor/protobuf/: ingestor.proto  mod.rs
flights/src/core/parser/: conversion.rs  mod.rs  task.rs
flights/src/gui/: app.rs
ogn_aprs_parser/: Cargo.toml
ogn_aprs_parser/src/: aprs_types.rs  errors.rs  parse.rs
ogn_parser_rs/: Cargo.toml
src/: airspace.rs  cli.rs  config.rs  ext.rs  gui.rs  ingestor.rs  lib.rs  logging.rs  main.rs  parser.rs  pipeline.rs  renderer.rs  test_utilities.rs  thread_manager.rs  types.rs
src/core/: airspace.rs  ingestor.rs  mod.rs  parser.rs  queues.rs  thread_manager.rs  types.rs
src/core/airspace/: detail.rs  task.rs
src/core/central_disk_logger/: errors.rs  interface.rs  mod.rs  task.rs  traits.rs
src/core/central_disk_logger/testing/: integration_tests.rs  mod.rs  test_helpers.rs
src/core/ingestor/: config.rs  detail.rs  disk.rs  error.rs  errors.rs  mod.rs  task.rs
src/core/ingestor/protobuf/: conversion.rs  ingestor.proto  mod.rs
src/core/parser/: aprs_types.rs  builder.rs  builder2.rs  constants.rs  conversion.rs  errors.rs  mod.rs  parse.rs  task.rs  types.rs
src/core/parser/protobuf/: conversion.rs  mod.rs  parser.proto
src/gui/: app.rs  constants.rs  mod.rs
src/parser/: aircraft.rs  builder.rs  constants.rs  mod.rs  types.rs
src/pipeline/: config.rs  mod.rs  setup.rs
src/protobuf/ingestor/v0/: ingestor.proto
tests/data/: test_ingestor_log.txt
