[package]
name = "flights"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
crossbeam-channel = "0.5"
env_logger = "0.11"
log = "0.4.29"
once_cell = "1.21.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"


[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = 0 }
missing_errors_doc = { level = "allow", priority = 1 }
