[workspace]
members = ["flights", "ogn_aprs_parser"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
approx = "0.5.1"
chrono = "0.4.42"
glob = "0.3.3"
log = "0.4.29"
prost-build = "0.14.3"
rstest = "0.26.1"
tempfile = "3.27.0"
test-log = "0.2.19"
thiserror = "2.0.18"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = 0 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
