[package]
name = "flights"
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
ogn_parser_rs = { path = "../ogn_parser_rs" }
bytes = "1.11.1"
chrono = { workspace = true }
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-channel = "0.5"
eframe = "0.33.3"
env_logger = "0.11"
log = { workspace = true }
prost = "0.14.3"
prost-types = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = { workspace = true }
toml = "0.9.8"
walkers = "0.52.0"

[dev-dependencies]
approx = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }

[build-dependencies]
glob = { workspace = true }
prost-build = { workspace = true }
