[package]
name = "ogn_aprs_parser"
version = "0.1.0"
rust-version = { workspace = true }
edition = { workspace = true }


[dependencies]
chrono = { workspace = true }
nom = "8.0.0"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rstest = { workspace = true }
